[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nisarg Patel",email = "nisargpatel0330@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.123.10,<0.124.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"